# pdf_vector_stores

./: Pipfile  README.md  pyproject.toml  requirements.txt
app/chat/: chat.py  create_embeddings.py  redis.py  score.py
app/chat/callbacks/: stream.py
app/chat/chains/: retrieval.py  streamable.py  tracable.py
app/chat/embeddings/: gemini.py
app/chat/llms/: __init__.py  chatgemini.py
app/chat/memories/: __init__.py  sql_memory.py  window_memory.py
app/chat/memories/histories/: sql_history.py
app/chat/tracing/: langfuse.py
app/chat/vector_store/: __init__.py  pinecone.py
app/web/views/: conversation_views.py
