[project]
name = "langchain-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.26.122",
    "botocore==1.29.122",
    "celery==5.3.1",
    "click==8.1.3",
    "flask==2.3.1",
    "flask-sqlalchemy==3.0.3",
    "flask-cors==4.0.0",
    "langchain",
    "python-dotenv==1.0.0",
    "werkzeug==2.3.1",
    "invoke==2.2.0",
    "pinecone-client==3.2.2",
    "pypdf==3.15.4",
    "watchdog==3.0.0",
    "tiktoken",
    "uuid==1.30",
    "langfuse",
    "backoff==2.2.1",
    "redis==5.0.0",
    "colorama",
    "langchain-community",
    "google.generativeai",
    "langchain-pinecone",
    "langchain-google-genai==4.0.0",
]
